kubernetes/esphome/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: esphome
  labels:
    app: esphome
spec:
  replicas: 1
  serviceName: esphome
  selector:
    matchLabels:
      app: esphome
  template:
    metadata:
      labels:
        app: esphome
    spec:
      containers:
        - name: esphome
          image: ghcr.io/esphome/esphome:2021.8.2
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 6052
          volumeMounts:
            - mountPath: /config
              name: esphome-config
          # resources:
          #   requests:
          #     memory: 16Mi
          #     cpu: 100m
          #   limits:
          #     memory: 32Mi
          #     cpu: 200m
      volumes:
        - name: esphome-config
          persistentVolumeClaim:
            claimName: esphome-config
