kubernetes/esphome/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: esphome
  name: esphome
spec:
  selector:
    app: esphome
  ports:
    - port: 6052
